--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,8 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
             - run: yarn run build
+        steps:
+            - uses: actions/download-artifact@v3
+              with:
+                  name: build-hash-binaries
+                  path: build/hash-history
