--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,12 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
             - run: yarn run build
+    deployment:
+        needs: build
+        runs-on: ubuntu-latest
+        environment:
+            name: ${{ github.ref_name }}
+
         steps:
             - uses: actions/download-artifact@v3
               with:
