--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
         steps:
             - uses: actions/download-artifact@v3
               with:
-                  name: build-hash-binaries
-                  path: build/hash-history
+                  name: build-binaries
+                  path: build
