--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: yarn install
             - run: yarn run build
+            - uses: actions/upload-artifact@v3
+              with:
+                  name: build
+                  path: build/html
     deployment:
         needs: build
         runs-on: ubuntu-latest
@@ -32,5 +36,5 @@ jobs:
         steps:
             - uses: actions/download-artifact@v3
               with:
-                  name: build-binaries
-                  path: build
+                  name: build
+                  path: build/html
