--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-# This workflow will do a clean install of node dependencies, build the source code and push the binaries to the deployment branch.
-name: Continuous Delivery
-
+# This workflow will do a clean install of node dependencies, build the source code and push the binaries to the deployment repository.
+name: Manually triggered workflow
 on:
-    push:
-        branches: [master]
+  workflow_dispatch:
 
 jobs:
     build:
@@ -15,23 +13,13 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-              with:
-                  persist-credentials: false
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: ${{ matrix.node-version }}
-            - run: yarn install
-            - run: yarn run build
-            - uses: actions/upload-artifact@v3
+                node-version: ${{ matrix.node-version }}
+            - run: yarm install
+            - run: yarn build
+            - uses: actions/upload-artifact@v2
               with:
-                  name: build
-                  path: build/html
-    deployment:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/download-artifact@v3
-              with:
-                  name: build
-                  path: build/html
+                name: bitshares-network
+                path: build/dist/ # or path/to/artifact
