--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
             - uses: actions/upload-artifact@v2
               with:
                 name: bitshares-network
-                path: / # or path/to/artifact
+                path: dist/ # or path/to/artifact
