--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,1 +1,34 @@
+# This workflow will do a clean install of node dependencies, build the source code and push the binaries to the deployment branch.
+name: Continuous Delivery
 
+on:
+    push:
+        branches: [master]
+
+jobs:
+    build:
+        runs-on: ubuntu-latest
+
+        strategy:
+            matrix:
+                node-version: [16.x]
+
+        steps:
+            - uses: actions/checkout@v2
+              with:
+                  persist-credentials: false
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - run:
+                  git config --global url."https://${{ secrets.AUTOMATION_ACCESS_TOKEN }}@github.com/".insteadOf ssh://git@github.com/
+            - run: yarn install
+            - run: yarn run build
+            - name: Deploy
+              uses: s0/git-publish-subdir-action@master
+              env:
+                  REPO: self
+                  BRANCH: master-dist
+                  FOLDER: dist
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
